# trace-litmus

./: .env.example  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  sitecustomize.py  streamlit_app.py
docs/: architecture.md  arize_ax_setup.md  cloud_run_deploy.md  demo_path.md  devpost_submission_draft.md  final_video_demo_script.md  hosted_phoenix_strategy.md  mcp_tool_inventory.md  phase10_final_status.md  phase10_git_staging_status.md  phase1_mcp_plan.md  phase2_streamlit_ui.md  phase3_gemini_layer.md  phase4_compliance_check.md  phase5_gemini_status.md  phase5_readiness.md  phase7_compliance_language_audit.md  phase7_final_readiness_report.md  phase7_hosted_app_verification.md  phase7_secret_scan.md  phase8_final_report.md  phase8_hosted_phoenix_investigation.md  phase8_option_a_attempt.md  phase8_provider_safety_audit.md  phase9_git_init_commands.md  phase9_public_repo_file_set.md  phase9_secret_hygiene.md  public_repo_readiness.md  submission_checklist.md  video_demo_script.md
scripts/: docker_smoke_test.md  phoenix_local_setup.md  seed_demo_phoenix.py  verify_gemini.py
src/tracelitmus/: __init__.py  agent.py  audit_rules.py  cli.py  models.py  phoenix_client.py  report.py  runner.py  web.py
templates/: report.md.j2
tests/fixtures/: sample_phoenix_response.json
tracelitmus/: __init__.py
